--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
             <li class="navbar__menu__item">Contact</li>
         </ul>
     </nav>
+
+    <!-- Home -->
+    <section id="home">
+        <img src="images/profile.jpg" alt="Ellie's profile photo" class="home__avatar" />
+        <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
+        <h2 class="home__description">A Software Engineer currently residing in Sydney, Australia.</h2>
+        <button class="home__contact">Contact Me</button>
+    </section>
+
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
