--- a/index.html
+++ b/index.html
@@ -45,7 +45,49 @@
     </section>
 
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus rem sequi? Nihil, est impedit dignissimos consequatur totam, odit
+            deserunt doloremque laudantium similique corrupti, iusto optio rerum in deleniti officia.
+        </p>
+        <div class="about__majors">
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
+            </div>
+            <div class="major">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">Front-end</div>
+                <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="images/jobs/logo-samsung.png" alt="samsung" class="job__logo" />
+                <p class="job__name">Currently working at Samsung as Software Engineer</p>
+                <p class="job__period">2019 Sept - Until now</p>
+            </div>
+            <div class="job">
+                <img src="images/jobs/logo-samsung.png" alt="samsung" class="job__logo" />
+                <p class="job__name">Currently working at Samsung as Software Engineer</p>
+                <p class="job__period">2019 Sept - Until now</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
