--- a/index.html
+++ b/index.html
@@ -176,9 +176,150 @@
             </div>
         </div>
     </section>
-    
+
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+            <button class="category__btn">All<span class="category__count">8</span></button>
+            <button class="category__btn">Front-end<span class="category__count">3</span></button>
+            <button class="category__btn">Back-end<span class="category__count">3</span></button>
+            <button class="category__btn">Mobile<span class="category__count">3</span></button>
+        </div>
+
+        <div class="work__projects">
+            <a 
+                href="https://github.com/dream-ellie/youtube-site" 
+                class="project"
+                data-type="front-end"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project1.png" 
+                    alt="Youtube"
+                >
+                <div class="project__description">
+                    <h3>Youtube Site</h3>
+                    <span>Clone coding with HTML and CSS</span>
+                </div>
+            </a>
+            <a
+                href="https://github.com/dream-ellie/responsive-nav-bar"
+                class="project"
+                data-type="front-end"
+                target="blank"
+            >
+                <img
+                    class="project__img"
+                    src="images/projects/project2.png"
+                    alt="navbar"
+                />
+                <div class="project__description">
+                    <h3>Responsive Navbar</h3>
+                    <span>HTML, CSS with media query</span>
+                </div>
+            </a>
+            <a
+                href="https://github.com/dream-ellie/responsive-nav-bar"
+                class="project"
+                data-type="front-end"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project3.png" 
+                    alt="navbar" 
+                />
+                <div class="project__description">
+                    <h3>Shopping mall game</h3>
+                    <span>HTML, CSS, JavaScript, Json</span>
+                </div>
+            </a>
+            <a 
+                href="https://github.com/dream-ellie/responsive-nav-bar" 
+                class="project" 
+                data-type="back-end"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project4.png" 
+                    alt="navbar" />
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a 
+                href="https://github.com/dream-ellie/responsive-nav-bar" 
+                class="project" 
+                data-type="back-end"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project5.png" 
+                    alt="navbar" 
+                />
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a 
+                href="https://github.com/dream-ellie/responsive-nav-bar" 
+                class="project" 
+                data-type="mobile"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project6.png" 
+                    alt="navbar" 
+                />
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a 
+                href="https://github.com/dream-ellie/responsive-nav-bar" 
+                class="project" 
+                data-type="mobile"
+                target="blank"
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project7.png" 
+                    alt="navbar" 
+                />
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+            <a 
+                href="https://github.com/dream-ellie/responsive-nav-bar" 
+                class="project" 
+                data-type="mobile"
+                target="blank"    
+            >
+                <img 
+                    class="project__img" 
+                    src="images/projects/project8.png" 
+                    alt="navbar" 
+                />
+                <div class="project__description">
+                    <h3>Project</h3>
+                    <span>Explanation</span>
+                </div>
+            </a>
+        
+        </div>
+    </section>
+
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
