--- a/index.html
+++ b/index.html
@@ -323,6 +323,51 @@
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1>Testimonials</h1>
+        <h3>See What they say about me</h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img 
+                    src="images/testimonial/people1.jpg" 
+                    alt="People"
+                    class="testimonial__avatar"
+                >
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        Pellentesque in ipsum id orci porta dapibus. 
+                        Nulla porttitor accumsan tincidunt. 
+                        Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. 
+                        Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
+                        Nulla porttitor accumsan tincidunt. 
+                        Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. 
+                        Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
+                    </p>
+                    <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <img 
+                    src="images/testimonial/people1.jpg" 
+                    alt="People"
+                    class="testimonial__avatar"
+                >
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        Pellentesque in ipsum id orci porta dapibus. 
+                        Nulla porttitor accumsan tincidunt. 
+                        Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
+                        Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. 
+                        Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
+                        Nulla porttitor accumsan tincidunt. 
+                        Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. 
+                        Quisque velit nisi, pretium ut lacinia in, elementum id enim. 
+                    </p>
+                    <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
