--- a/index.html
+++ b/index.html
@@ -321,9 +321,7 @@
     </section>
 
     <!-- Testimonials -->
-    <section id="testimonials"></section>
-    <!-- Contact -->
-    <section id="contact">
+    <section id="testimonials">
         <h1>Testimonials</h1>
         <h3>See What they say about me</h3>
         <div class="testimonials">
@@ -368,6 +366,23 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact">
+        <h1 class="contact__title">Let's talk</h1>
+        <h2 class="contact__email">dream.coder.ellie@gmail.com</h2>
+        <div class="contact__links">
+            <a href="https://github.com/dream-ellie" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="#" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+        <p class="contact__rights">
+            2020 Dream Coding Ellie - All rights reserved
+        </p>
     </section>
 </body>
 </html>
