--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
         <meta name="description" content="Portfolio for world-renowned software engineer Ellie" />
         <meta name="author" content="Ellie" />
         <link rel="icon" type="image/png" href="images/favicon.png" />
-        <script
-            defer
-            src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
-            integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
-            crossorigin="anonymous"
-        ></script>
+        <script defer src="https://kit.fontawesome.com/91aac793e7.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -45,7 +40,7 @@
         </section>
 
         <!-- About -->
-        <section id="about">
+        <section id="about" class="section">
             <h1>About me</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure possimus rem sequi? Nihil, est impedit dignissimos consequatur totam, odit
@@ -56,40 +51,44 @@
                     <div class="major__icon">
                         <i class="fab fa-html5"></i>
                     </div>
-                    <div class="major__title">Front-end</div>
+                    <h2 class="major__title">Front-end</h2>
+                    <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
+                </div>
+                <div class="major">
+                    <div class="major__icon">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <h2 class="major__title">Mobile</h2>
                     <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
                 </div>
                 <div class="major">
                     <div class="major__icon">
                         <i class="fab fa-html5"></i>
                     </div>
-                    <div class="major__title">Front-end</div>
-                    <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
-                </div>
-                <div class="major">
-                    <div class="major__icon">
-                        <i class="fab fa-html5"></i>
-                    </div>
-                    <div class="major__title">Front-end</div>
+                    <h2 class="major__title">Front-end</h2>
                     <div class="major__description">HTML, CSS, JavaScript, TypeScript, <br />React, Vue, Web APIs</div>
                 </div>
             </div>
             <div class="about__jobs">
                 <div class="job">
                     <img src="images/jobs/logo-samsung.png" alt="samsung" class="job__logo" />
-                    <p class="job__name">Currently working at Samsung as Software Engineer</p>
-                    <p class="job__period">2019 Sept - Until now</p>
+                    <div class="job__description">
+                        <p class="job__name">Currently working at Samsung as Software Engineer</p>
+                        <p class="job__period">2019 Sept - Until now</p>
+                    </div>
                 </div>
                 <div class="job">
                     <img src="images/jobs/logo-samsung.png" alt="samsung" class="job__logo" />
-                    <p class="job__name">Currently working at Samsung as Software Engineer</p>
-                    <p class="job__period">2019 Sept - Until now</p>
+                    <div class="job__description">
+                        <p class="job__name">Currently working at Samsung as Software Engineer</p>
+                        <p class="job__period">2019 Sept - Until now</p>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Skills -->
-        <section id="skills">
+        <section id="skills" class="section">
             <h1>Skills</h1>
             <h2>Skills & Attributes</h2>
             <p>
@@ -178,7 +177,7 @@
         </section>
 
         <!-- Work -->
-        <section id="work">
+        <section id="work" class="section">
             <h1>My work</h1>
             <h3>Projects</h3>
             <div class="work__categories">
@@ -249,7 +248,7 @@
         </section>
 
         <!-- Testimonials -->
-        <section id="testimonials">
+        <section id="testimonials" class="section">
             <h1>Testimonials</h1>
             <h3>See What they say about me</h3>
             <div class="testimonials">
@@ -281,7 +280,7 @@
         </section>
 
         <!-- Contact -->
-        <section id="contact">
+        <section id="contact" class="section">
             <h1 class="contact__title">Let's talk</h1>
             <h2 class="contact__email">dream.coder.ellie@gmail.com</h2>
             <div class="contact__links">
