CSS: Fix section container

--- a/index.html
+++ b/index.html
@@ -180,103 +180,107 @@
 
         <!-- Work -->
         <section id="work" class="section">
-            <h1>My work</h1>
-            <h3>Projects</h3>
-            <div class="work__categories">
-                <button class="category__btn active">All<span class="category__count">8</span></button>
-                <button class="category__btn">Front-end<span class="category__count">3</span></button>
-                <button class="category__btn">Back-end<span class="category__count">3</span></button>
-                <button class="category__btn">Mobile<span class="category__count">3</span></button>
-            </div>
+            <div class="section__container">
+                <h1>My work</h1>
+                <h3>Projects</h3>
+                <div class="work__categories">
+                    <button class="category__btn active">All<span class="category__count">8</span></button>
+                    <button class="category__btn">Front-end<span class="category__count">3</span></button>
+                    <button class="category__btn">Back-end<span class="category__count">3</span></button>
+                    <button class="category__btn">Mobile<span class="category__count">3</span></button>
+                </div>
 
-            <div class="work__projects">
-                <a href="https://github.com/dream-ellie/youtube-site" class="project" data-type="front-end" target="blank">
-                    <img class="project__img" src="images/projects/project1.png" alt="Youtube" />
-                    <div class="project__description">
-                        <h3>Youtube Site</h3>
-                        <span>Clone coding with HTML and CSS</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end" target="blank">
-                    <img class="project__img" src="images/projects/project2.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Responsive Navbar</h3>
-                        <span>HTML, CSS with media query</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end" target="blank">
-                    <img class="project__img" src="images/projects/project3.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Shopping mall game</h3>
-                        <span>HTML, CSS, JavaScript, Json</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="back-end" target="blank">
-                    <img class="project__img" src="images/projects/project4.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Project</h3>
-                        <span>Explanation</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="back-end" target="blank">
-                    <img class="project__img" src="images/projects/project5.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Project</h3>
-                        <span>Explanation</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
-                    <img class="project__img" src="images/projects/project6.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Project</h3>
-                        <span>Explanation</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
-                    <img class="project__img" src="images/projects/project7.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Project</h3>
-                        <span>Explanation</span>
-                    </div>
-                </a>
-                <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
-                    <img class="project__img" src="images/projects/project8.png" alt="navbar" />
-                    <div class="project__description">
-                        <h3>Project</h3>
-                        <span>Explanation</span>
-                    </div>
-                </a>
+                <div class="work__projects">
+                    <a href="https://github.com/dream-ellie/youtube-site" class="project" data-type="front-end" target="blank">
+                        <img class="project__img" src="images/projects/project1.png" alt="Youtube" />
+                        <div class="project__description">
+                            <h3>Youtube Site</h3>
+                            <span>Clone coding with HTML and CSS</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end" target="blank">
+                        <img class="project__img" src="images/projects/project2.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Responsive Navbar</h3>
+                            <span>HTML, CSS with media query</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end" target="blank">
+                        <img class="project__img" src="images/projects/project3.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Shopping mall game</h3>
+                            <span>HTML, CSS, JavaScript, Json</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="back-end" target="blank">
+                        <img class="project__img" src="images/projects/project4.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Project</h3>
+                            <span>Explanation</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="back-end" target="blank">
+                        <img class="project__img" src="images/projects/project5.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Project</h3>
+                            <span>Explanation</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
+                        <img class="project__img" src="images/projects/project6.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Project</h3>
+                            <span>Explanation</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
+                        <img class="project__img" src="images/projects/project7.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Project</h3>
+                            <span>Explanation</span>
+                        </div>
+                    </a>
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="mobile" target="blank">
+                        <img class="project__img" src="images/projects/project8.png" alt="navbar" />
+                        <div class="project__description">
+                            <h3>Project</h3>
+                            <span>Explanation</span>
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
 
         <!-- Testimonials -->
         <section id="testimonials" class="section">
-            <h1>Testimonials</h1>
-            <h3>See What they say about me</h3>
-            <div class="testimonials">
-                <div class="testimonial">
-                    <img src="images/testimonial/people1.jpg" alt="People" class="testimonial__avatar" />
-                    <div class="testimonial__speech-bubble">
-                        <p>
-                            Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Vivamus magna justo, lacinia eget consectetur sed,
-                            convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia
-                            in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Quisque
-                            velit nisi, pretium ut lacinia in, elementum id enim.
-                        </p>
-                        <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+            <div class="section__container">
+                <h1>Testimonials</h1>
+                <h3>See What they say about me</h3>
+                <div class="testimonials">
+                    <div class="testimonial">
+                        <img src="images/testimonial/people1.jpg" alt="People" class="testimonial__avatar" />
+                        <div class="testimonial__speech-bubble">
+                            <p>
+                                Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Vivamus magna justo, lacinia eget consectetur
+                                sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                                lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                                Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+                            </p>
+                            <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+                        </div>
                     </div>
-                </div>
-                <div class="testimonial">
-                    <div class="testimonial__speech-bubble">
-                        <p>
-                            Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Vivamus magna justo, lacinia eget consectetur sed,
-                            convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia
-                            in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Quisque
-                            velit nisi, pretium ut lacinia in, elementum id enim.
-                        </p>
-                        <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+                    <div class="testimonial">
+                        <div class="testimonial__speech-bubble">
+                            <p>
+                                Pellentesque in ipsum id orci porta dapibus. Nulla porttitor accumsan tincidunt. Vivamus magna justo, lacinia eget consectetur
+                                sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                                lacinia in, elementum id enim. Nulla porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                                Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+                            </p>
+                            <p class="name"><a href="https://github.com/dream-ellie">Ellie</a> /Samsung</p>
+                        </div>
+                        <img src="images/testimonial/people1.jpg" alt="People" class="testimonial__avatar" />
                     </div>
-                    <img src="images/testimonial/people1.jpg" alt="People" class="testimonial__avatar" />
                 </div>
             </div>
         </section>
