--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
                 <li class="navbar__menu__item active">Home</li>
                 <li class="navbar__menu__item">About</li>
                 <li class="navbar__menu__item">Skills</li>
-                <li class="navbar__menu__item">My work/li></li>
+                <li class="navbar__menu__item">My work</li>
                 <li class="navbar__menu__item">Testimonials</li>
                 <li class="navbar__menu__item">Contact</li>
             </ul>
+
+            <!-- Toggle button -->
+            <button class="navbar__toggle-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </nav>
 
         <!-- Home -->
