--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="images/profile.jpg" alt="Ellie's profile photo" class="home__avatar" />
             <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
             <h2 class="home__description">A Software Engineer currently residing in Sydney, Australia.</h2>
-            <button class="home__contact">Contact Me</button>
+            <button class="home__contact" data-link="#contact">Contact Me</button>
         </section>
 
         <!-- About -->
