--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
         <!-- Home -->
         <section id="home">
-            <img src="images/profile.jpg" alt="Ellie's profile photo" class="home__avatar" />
-            <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
-            <h2 class="home__description">A Software Engineer currently residing in Sydney, Australia.</h2>
-            <button class="home__contact" data-link="#contact">Contact Me</button>
+            <div class="home__container">
+                <img src="images/profile.jpg" alt="Ellie's profile photo" class="home__avatar" />
+                <h1 class="home__title">Hello, <br />I'm Dream Coder</h1>
+                <h2 class="home__description">A Software Engineer currently residing in Sydney, Australia.</h2>
+                <button class="home__contact" data-link="#contact">Contact Me</button>
+            </div>
         </section>
 
         <!-- About -->
