--- a/index.html
+++ b/index.html
@@ -191,21 +191,21 @@
                 <h1>My work</h1>
                 <h3>Projects</h3>
                 <div class="work__categories">
-                    <button class="category__btn active">All<span class="category__count">8</span></button>
-                    <button class="category__btn">Front-end<span class="category__count">3</span></button>
-                    <button class="category__btn">Back-end<span class="category__count">3</span></button>
-                    <button class="category__btn">Mobile<span class="category__count">3</span></button>
+                    <button class="category__btn active" data-filter="*">All<span class="category__count">8</span></button>
+                    <button class="category__btn" data-filter="front-end">Front-end<span class="category__count">3</span></button>
+                    <button class="category__btn" data-filter="back-end">Back-end<span class="category__count">3</span></button>
+                    <button class="category__btn" data-filter="mobile">Mobile<span class="category__count">3</span></button>
                 </div>
 
                 <div class="work__projects">
-                    <a href="https://github.com/dream-ellie/youtube-site" class="project" data-type="front-end" target="blank">
+                    <a href="https://github.com/dream-ellie/youtube-site" class="project" target="blank" data-type="front-end">
                         <img class="project__img" src="images/projects/project1.png" alt="Youtube" />
                         <div class="project__description">
                             <h3>Youtube Site</h3>
                             <span>Clone coding with HTML and CSS</span>
                         </div>
                     </a>
-                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" data-type="front-end" target="blank">
+                    <a href="https://github.com/dream-ellie/responsive-nav-bar" class="project" target="blank" data-type="front-end">
                         <img class="project__img" src="images/projects/project2.png" alt="navbar" />
                         <div class="project__description">
                             <h3>Responsive Navbar</h3>
